Revelation changelog

---------------[ xxxx-xx-xx : 0.3.1 ]---------------

2004-07-08  Erik Grinaker <erikg@codepoet.no>

	* the OK button in the password dialogs is inactive when it's
	missing input

	* cleaned up the EntryStore code, and merged the DataStore
	and EntryStore classes

2004-06-30  Erik Grinaker <erikg@codepoet.no>

	* file-selectors and the about dialog are set as transients
	for the main app window

2004-06-29  Erik Grinaker <erikg@codepoet.no>

	* miscellaneous code cleanups

	* updated the fpm datahandler to use new Entry class,
	and rewrote conversions routines

	* added importer/exporter for .netrc files

2004-06-22  Erik Grinaker <erikg@codepoet.no>

	* rewrote internal data handling routines to use an Entry
	object instead of a normal dictionary, and Field objects
	instead of a field dict

2004-06-16  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug introduced by recent cleanups, which broke
	the TreeView.set_model() method - caused file locking to
	not empty the treeview

2004-06-11  Erik Grinaker <erikg@codepoet.no>

	* most dialogs can now be closed by pressing Escape

2004-06-10  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug introduced in yesterday's cleanups, which
	omitted the treeview's scrolledwindow

	* implemented a custom FileEntry widget to use instead of
	the libgnomeui one - will hopefully fix some nasty crasher
	bugs

2004-06-09  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug with spin buttons which made it impossible
	to set a value with the keyboard

	* when saving, missing parent directories are automatically
	created

	* the window size and main pane position is remembered

	* code cleanups in widget and ui code

2004-06-06  Erik Grinaker <erikg@codepoet.no>

	* split out data handlers into separate modules

2004-06-03  Erik Grinaker <erikg@codepoet.no>

	* the vertical scrollbar in the main window is only shown
	when needed

2004-05-09  Erik Grinaker <erikg@codepoet.no>
