@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-07-09  Erik Grinaker <erikg@codepoet.no>
+
+	* rewrote the Undo/Redo code, and moved most of it into the
+	UndoQueue class
+
 2004-07-08  Erik Grinaker <erikg@codepoet.no>
 
 	* the OK button in the password dialogs is inactive when it's
